--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -649,6 +649,7 @@ if (!is_android) {
       "//brave/components/ipfs/test:brave_ipfs_browser_tests",
       "//brave/browser/farbling:browser_tests",
       "//brave/browser/ui/tabs/test:browser_tests",
+      "//brave/renderer/test:browser_tests",
       "//media:test_support",
     ]
 
